change get(0) with getFirst in EventInvitationServiceTest